--- a/Pathfinding/Pathfinding/Pathfinding.vcxproj.filters
+++ b/Pathfinding/Pathfinding/Pathfinding.vcxproj.filters
@@ -30,13 +30,16 @@
     <ClCompile Include="..\Pathfinding.ConsoleApplication\IPathHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Pathfinding.ConsoleApplication\pch.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="PathfindingGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Program.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Tile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -56,10 +59,13 @@
     <ClInclude Include="..\Pathfinding.ConsoleApplication\IPathHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Pathfinding.ConsoleApplication\pch.h">
+    <ClInclude Include="PathfindingGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PathfindingGame.h">
+    <ClInclude Include="Tile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
