--- a/Pathfinding/Pathfinding/Pathfinding.vcxproj.filters
+++ b/Pathfinding/Pathfinding/Pathfinding.vcxproj.filters
@@ -77,6 +77,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="packages.config" />
+    <None Include="..\Content\SuperGrid.grid">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\Content\End.png">
